--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
     "reporter"
   ],
   "peerDependencies": {
-    "mocha": "^1.7.0"
+    "mocha": ">=1.7.0"
   },
   "devDependencies": {
     "mocha": "^1.7.0",
